--- a/public/assets/src/cars/cars-list.html
+++ b/public/assets/src/cars/cars-list.html
@@ -71,7 +71,7 @@
                             <i class="glyphicon glyphicon-zoom-in"></i>
                         </button>-->
                         <a ui-sref="app.cars-edit({id:row.id})"  md-ink-ripple tooltip="Edit Data"
-                           class="btn btn-sm btn-default" ng-if="row.is_lock =='0'">
+                           class="btn btn-sm btn-default">
                             <i class="glyphicon glyphicon-edit"></i>
                         </a>
                         <button type="button" ng-click="hapus(row.id)" md-ink-ripple tooltip="Hapus Data"
