--- a/public/assets/src/drivers/drivers-list.html
+++ b/public/assets/src/drivers/drivers-list.html
@@ -1,9 +1,9 @@
 <div class="alert {{alertset.class}} lighten-4 {{alertset.class}}-text text-darken-2 {{alertset.show}}">
     <span ng-repeat="(key, value) in alertset.msg">{{value}}</span>
 </div>
-<div class="panel panel-default" ng-controller="UrusanCtrl">
+<div class="panel panel-default" ng-controller="DriversCtrl">
     <div class="panel-heading bg-white" style="background: #b3c4c7;">
-        <span class="font-bold"><left><font color="black">DATA MEMBERS</font></left></span>
+        <span class="font-bold"><left><font color="black">List Drivers</font></left></span>
     </div>
     <!--<div ng-show="isLoading" layout="row" layout-sm="column" layout-align="space-around">-->
         <!--<md-progress-circular md-mode="indeterminate"></md-progress-circular>-->
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-sm-8 m-b-xs">
             <span tooltip="Tambah Data">
-                <a md-ink-ripple ui-sref="app.urusan-create" class="btn btn-sm btn-default">
+                <a md-ink-ripple ui-sref="app.drivers-create" class="btn btn-sm btn-default">
                     <i class="glyphicon glyphicon-plus-sign"></i></a>
                 </span>
             <span tooltip="Refresh data">
@@ -44,52 +44,38 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th class="col-md-2">Nama</th>
-                    <th class="col-md-2">Email</th>
-                    <th class="col-md-2">Class</th>
+                    <th class="col-md-1">No.</th>
+                    <th class="col-md-2">Name</th>
+                    <th class="col-md-2">KTP</th>
+                    <th class="col-md-2">Gender</th>
+                    <th class="col-md-2">Phone</th>
+                    <th class="col-md-2">Address</th>
                     <th class="col-md-2">Aksi</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="row in dataMembers">
+                <tr ng-repeat="row in dataDrivers">
+                    <td  class="col-md-1">{{$index +1}}</td>
                     <td class="col-md-2">{{row.name}}</td>
-                    <td class="col-md-2">{{row.email}}</td>
-                    <td class="col-md-2">{{row.class}}</td>
-                    <td class="col-md-2">
-                        <span ng-if="row.is_lock == '0'" class="label bg-info ng-scope">Draft</span>
-                        <span ng-if="row.is_lock == ''" class="label bg-info ng-scope">Draft</span>
-                        <span ng-if="row.is_lock == '1' " class="label bg-success ng-scope">Final</span>
-                    </td>
+                    <td class="col-md-2">{{row.ktp}}</td>
+                    <td class="col-md-2">{{row.gender}}</td>
+                    <td class="col-md-2">{{row.phone}}</td>
+                    <td class="col-md-2">{{row.address}}</td>
+
 
                     <td class="col-md-2">
-                        <button type="button" ng-click="detailurusan(row.id)" md-ink-ripple tooltip="Detail Urusan"
+                        <!--<button type="button" ng-click="detailurusan(row.id)" md-ink-ripple tooltip="Detail Urusan"
                                 class="btn btn-sm btn-info">
                             <i class="glyphicon glyphicon-zoom-in"></i>
-                        </button>
-                        <a ui-sref="app.urusan-edit({id:row.id})"  md-ink-ripple tooltip="Edit Data"
-                           class="btn btn-sm btn-default" ng-if="row.is_lock =='0'">
+                        </button>-->
+                        <a ui-sref="app.drivers-edit({id:row.id})"  md-ink-ripple tooltip="Edit Data"
+                           class="btn btn-sm btn-default">
                             <i class="glyphicon glyphicon-edit"></i>
                         </a>
                         <button type="button" ng-click="hapus(row.id)" md-ink-ripple tooltip="Hapus Data"
                                 class="btn btn-sm btn-danger" >
                             <i class="glyphicon glyphicon-trash"></i>
                         </button>
-                        <a ui-sref="app.urusan-edit({id:row.id})"  md-ink-ripple tooltip="Edit Data"
-                           class="btn btn-sm btn-default" ng-if="row.is_lock ==''">
-                            <i class="glyphicon glyphicon-edit"></i>
-                        </a>
-                        <button type="button" ng-click="hapus(row.id)" md-ink-ripple tooltip="Hapus Data"
-                                class="btn btn-sm btn-danger" ng-if="row.is_lock ==''">
-                            <i class="glyphicon glyphicon-trash"></i>
-                        </button>
-                        <button ng-if="row.is_lock =='0'" type="button" ng-click="kunci(row.id)" md-ink-ripple tooltip="Kunci Data" class="btn btn-sm btn-accent">
-                            <i class="glyphicon glyphicon-lock"></i>
-                        </button>
-                        <button ng-if="row.is_lock == ''" type="button" ng-click="kunci(row.id)" md-ink-ripple tooltip="Kunci Data" class="btn btn-sm btn-accent">
-                            <i class="glyphicon glyphicon-lock"></i>
-                        </button>
-                        <button type="button" ng-click="buka(row.id)"ng-if="row.is_lock =='1' && dataUser.email == 'engineering@simperkot.com'"  md-ink-ripple tooltip="Buka Kunci Data" class="btn btn-sm btn-accent">
-                            <i class="fa fa-unlock-alt"></i>
                         </button>
 
                     </td>
