--- a/public/assets/src/customers/customers-create.html
+++ b/public/assets/src/customers/customers-create.html
@@ -1,5 +1,5 @@
 <!-- start: PAGE TITLE -->
-<div ng-controller="EmployeesCreateCtrl">
+<div ng-controller="CustomersCreateCtrl">
 <section id="page-title">
 	<div class="row">
 		<div class="col-sm-8">
@@ -40,14 +40,14 @@
 									<span class="error text-small block" ng-if="Form.ktp.$dirty && Form.ktp.$invalid">First Name is required</span>
 									<span class="success text-small" ng-if="Form.ktp.$valid">Thank You!</span>
 								</div>
-								<div class="form-group" ng-class="{'has-error':Form.gender.$dirty && Form.gender.$invalid, 'has-success':Form.gender.$valid}">
+								<div class="form-group" ng-class="{'has-error':Form.users_id.$dirty && Form.users_id.$invalid, 'has-success':Form.users_id.$valid}">
 									<label class="control-label">
-										 Gender <span class="symbol required"></span>
+										 Users <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Gender" class="form-control" name="gender" ng-model="myModel.gender"
+									<input gender="text" placeholder="Enter your Users" class="form-control" name="users_id" ng-model="myModel.users_id"
 									 required />
-									<span class="error text-small block" ng-if="Form.gender.$dirty && Form.gender.$invalid">First Gender is required</span>
-									<span class="success text-small" ng-if="Form.gender.$valid">Thank You!</span>
+									<span class="error text-small block" ng-if="Form.users_id.$dirty && Form.users_id.$invalid">First Users is required</span>
+									<span class="success text-small" ng-if="Form.users_id.$valid">Thank You!</span>
 								</div>
 
 								<!--<div class="form-group" ng-class="{'has-error':Form.email.$dirty && Form.email.$invalid, 'has-success':Form.email.$valid}">
@@ -96,7 +96,7 @@
 								<button gender="reset" class="btn btn-primary btn-o" ng-disabled="process" ng-click="form.reset(Form)">
 									Reset
 								</button>
-								<button md-ink-ripple class="btn btn-primary btn-o" ui-sref="app.employees-list"
+								<button md-ink-ripple class="btn btn-primary btn-o" ui-sref="app.customers-list"
 										ng-disabled="process">Kembali
 								</button>
 							</div>
