--- a/public/assets/src/customers/customers-list.html
+++ b/public/assets/src/customers/customers-list.html
@@ -1,9 +1,9 @@
 <div class="alert {{alertset.class}} lighten-4 {{alertset.class}}-text text-darken-2 {{alertset.show}}">
     <span ng-repeat="(key, value) in alertset.msg">{{value}}</span>
 </div>
-<div class="panel panel-default" ng-controller="EmployeesCtrl">
+<div class="panel panel-default" ng-controller="CustomersCtrl">
     <div class="panel-heading bg-white" style="background: #b3c4c7;">
-        <span class="font-bold"><left><font color="black">List Employees</font></left></span>
+        <span class="font-bold"><left><font color="black">List Customers</font></left></span>
     </div>
     <!--<div ng-show="isLoading" layout="row" layout-sm="column" layout-align="space-around">-->
         <!--<md-progress-circular md-mode="indeterminate"></md-progress-circular>-->
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-sm-8 m-b-xs">
             <span tooltip="Tambah Data">
-                <a md-ink-ripple ui-sref="app.employees-create" class="btn btn-sm btn-default">
+                <a md-ink-ripple ui-sref="app.customers-create" class="btn btn-sm btn-default">
                     <i class="glyphicon glyphicon-plus-sign"></i></a>
                 </span>
             <span tooltip="Refresh data">
@@ -47,18 +47,18 @@
                     <th class="col-md-1">No.</th>
                     <th class="col-md-2">Name</th>
                     <th class="col-md-2">KTP</th>
-                    <th class="col-md-2">Gender</th>
+                    <th class="col-md-2">Customers</th>
                     <th class="col-md-2">Phone</th>
                     <th class="col-md-2">Address</th>
                     <th class="col-md-2">Aksi</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="row in dataEmployees">
+                <tr ng-repeat="row in dataCustomers">
                     <td  class="col-md-1">{{$index +1}}</td>
                     <td class="col-md-2">{{row.name}}</td>
                     <td class="col-md-2">{{row.ktp}}</td>
-                    <td class="col-md-2">{{row.gender}}</td>
+                    <td class="col-md-2">{{row.customers}}</td>
                     <td class="col-md-2">{{row.phone}}</td>
                     <td class="col-md-2">{{row.address}}</td>
 
@@ -68,7 +68,7 @@
                                 class="btn btn-sm btn-info">
                             <i class="glyphicon glyphicon-zoom-in"></i>
                         </button>-->
-                        <a ui-sref="app.employees-edit({id:row.id})"  md-ink-ripple tooltip="Edit Data"
+                        <a ui-sref="app.customers-edit({id:row.id})"  md-ink-ripple tooltip="Edit Data"
                            class="btn btn-sm btn-default">
                             <i class="glyphicon glyphicon-edit"></i>
                         </a>
