--- a/public/assets/src/transactions/cars.dialog.html
+++ b/public/assets/src/transactions/cars.dialog.html
@@ -8,8 +8,8 @@
             </div>
             <div class="col-sm-4">
                 <div class="input-group pull-right">
-                    <input type="text" class="input-sm form-control" placeholder="Search" ng-model="main.term"
-                           ng-disabled="disUtama.txtCari" ng-enter="getData()">
+                    <input type="text" class="input-sm form-control" placeholder="Search" ng-model="main.term" ng-disabled="disUtama.txtCari"
+                        ng-enter="getData()">
                     <span class="input-group-btn" tooltip="Cari Data">
                     <button md-ink-ripple class="btn btn-sm btn-default" type="button" ng-click="getData()"
                             ng-disabled="main.term ==''">Cari
@@ -22,12 +22,11 @@
     <table class="table table-striped table-hover">
         <tr>
             <th class="col-md-1">No.</th>
-                    <th class="col-md-2">Name</th>
-                    <th class="col-md-2">KTP</th>
-                    <th class="col-md-2">Gender</th>
-                    <th class="col-md-2">Phone</th>
-                    <th class="col-md-2">Address</th>
-                    <th class="col-md-2">Aksi</th>
+            <th class="col-md-2">Color</th>
+            <th class="col-md-2">No.Plat</th>
+            <th class="col-md-2">Type</th>
+            <th class="col-md-2">Merk</th>
+            <th class="col-md-2">Aksi</th>
         </tr>
     </table>
     <!--<div ng-show="isLoading" layout="row" layout-sm="column" layout-align="space-around">-->
@@ -40,20 +39,18 @@
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <tbody>
-                    <tr ng-repeat="row in input">
-                        <td  class="col-md-1">{{$index +1}}</td>
-                    <td class="col-md-2">{{row.name}}</td>
-                    <td class="col-md-2">{{row.ktp}}</td>
-                    <td class="col-md-2">{{row.gender}}</td>
-                    <td class="col-md-2">{{row.phone}}</td>
-                    <td class="col-md-2">{{row.address}}</td>
-                        <td class="col-md-2">
-                            <button ng-click="pilih(row)" md-ink-ripple tooltip="Pilih Data"
-                                    class="btn btn-sm btn-info">
+                        <tr ng-repeat="row in input">
+                            <td class="col-md-1">{{$index +1}}</td>
+                            <td class="col-md-2">{{row.color}}</td>
+                            <td class="col-md-2">{{row.no.plat}}</td>
+                            <td class="col-md-2">{{row.type}}</td>
+                            <td class="col-md-2">{{row.merk}}</td>
+                            <td class="col-md-2">
+                                <button ng-click="pilih(row)" md-ink-ripple tooltip="Pilih Data" class="btn btn-sm btn-info">
                                 <i class="glyphicon glyphicon-check"></i>
                             </button>
-                        </td>
-                    </tr>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -65,24 +62,19 @@
                     <div class="col-sm-8 text-right text-center-xs">
                         <ul class="pagination m-t-none m-b-none">
                             <li tooltip="Halaman Pertama">
-                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='firstPage()'
-                                        ng-disabled='current_page == 1 || disUtama.btnPagging'><i
+                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='firstPage()' ng-disabled='current_page == 1 || disUtama.btnPagging'><i
                                         class="fa fa-angle-double-left"></i></button>
                             </li>
                             <li tooltip="Halaman Sebelumnya">
-                                <button md-ink-ripple class="btn btn-default" type="button"
-                                        ng-click='previousPage()'
-                                        ng-disabled='current_page <= 1 || disUtama.btnPagging'><i
+                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='previousPage()' ng-disabled='current_page <= 1 || disUtama.btnPagging'><i
                                         class="fa fa-angle-left"></i></button>
                             </li>
                             <li tooltip="Halaman Selanjutnya">
-                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='nextPage()'
-                                        ng-disabled='main.page >= last_page || disUtama.btnPagging'><i
+                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='nextPage()' ng-disabled='main.page >= last_page || disUtama.btnPagging'><i
                                         class="fa fa-angle-right"></i></button>
                             </li>
                             <li tooltip="Halaman Terakhir">
-                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='lastPage()'
-                                        ng-disabled='main.page >= last_page || disUtama.btnPagging'><i
+                                <button md-ink-ripple class="btn btn-default" type="button" ng-click='lastPage()' ng-disabled='main.page >= last_page || disUtama.btnPagging'><i
                                         class="fa fa-angle-double-right"></i></button>
                             </li>
                         </ul>
