--- a/public/assets/src/transactions/transactions-edit.html
+++ b/public/assets/src/transactions/transactions-edit.html
@@ -22,66 +22,153 @@
 						<div class="col-md-12">
 							<fieldset>
 
-								<div class="form-group" ng-class="{'has-error':Form.name.$dirty && Form.name.$invalid, 'has-success':Form.name.$valid}">
-									<label class="control-label">
-										 Name <span class="symbol required"></span>
-									</label>
-									<input gender="text" placeholder="Enter your Name" class="form-control" name="name" ng-model="myModel.name"
-									 required />
-									<span class="error text-small block" ng-if="Form.name.$dirty && Form.name.$invalid">First Name is required</span>
-									<span class="success text-small" ng-if="Form.name.$valid">Thank You!</span>
-								</div>
-                                <div class="form-group" ng-class="{'has-error':Form.ktp.$dirty && Form.ktp.$invalid, 'has-success':Form.ktp.$valid}">
-									<label class="control-label">
-										 Ktp <span class="symbol required"></span>
-									</label>
-									<input gender="text" placeholder="Enter your Ktp" class="form-control" name="ktp" ng-model="myModel.ktp"
-									 required />
-									<span class="error text-small block" ng-if="Form.ktp.$dirty && Form.ktp.$invalid">First Name is required</span>
-									<span class="success text-small" ng-if="Form.ktp.$valid">Thank You!</span>
-								</div>
-								<div class="form-group" ng-class="{'has-error':Form.gender.$dirty && Form.gender.$invalid, 'has-success':Form.gender.$valid}">
-									<label class="control-label">
-										 Gender <span class="symbol required"></span>
-									</label>
-									<input gender="text" placeholder="Enter your Gender" class="form-control" name="gender" ng-model="myModel.gender"
-									 required />
-									<span class="error text-small block" ng-if="Form.gender.$dirty && Form.gender.$invalid">First Gender is required</span>
-									<span class="success text-small" ng-if="Form.gender.$valid">Thank You!</span>
-								</div>
+								<div class="form-group" ng-class="{'has-error':Form.customers.$dirty && Form.customers.$invalid, 'has-success':Form.customers.$valid}">
+										<label class="control-label">
+                    Customers <span class="symbol required"></span>
+                  </label>
+										<p class="input-group">
+											<input type="text" placeholder="Enter your Customers" class="form-control" destinations="customers" ng-model="myModel.customers"
+											 required readonly/>
+											<span class="input-group-btn">
+                      <button class="btn btn-default" ng-click="opencustomers('lg')" md-ink-ripple
+                        tooltip="Pilih Members"><i
+                        class="glyphicon glyphicon-list"></i></button>
 
-								<!--<div class="form-group" ng-class="{'has-error':Form.email.$dirty && Form.email.$invalid, 'has-success':Form.email.$valid}">
+                    <span class="error text-small block" ng-if="Form.customers.$dirty && Form.customers.$invalid">First Customers is required</span>
+
+											<span class="success text-small" ng-if="Form.customers.$valid">Thank You!</span>
+											</span>
+									</div>
+
+									<div class="form-group" ng-class="{'has-error':Form.cars.$dirty && Form.cars.$invalid, 'has-success':Form.cars.$valid}">
+										<label class="control-label">
+                    Cars <span class="symbol required"></span>
+                  </label>
+										<p class="input-group">
+											<input type="text" placeholder="Enter your Cars" class="form-control" destinations="cars" ng-model="myModel.cars"
+											 required readonly/>
+											<span class="input-group-btn">
+                      <button class="btn btn-default" ng-click="opencars('lg')" md-ink-ripple
+                        tooltip="Pilih Members"><i
+                        class="glyphicon glyphicon-list"></i></button>
+
+                    <span class="error text-small block" ng-if="Form.cars.$dirty && Form.cars.$invalid">First Cars is required</span>
+
+											<span class="success text-small" ng-if="Form.cars.$valid">Thank You!</span>
+											</span>
+									</div>
+
+									<div class="form-group" ng-class="{'has-error':Form.users.$dirty && Form.users.$invalid, 'has-success':Form.users.$valid}">
+										<label class="control-label">
+                    Users <span class="symbol required"></span>
+                  </label>
+										<p class="input-group">
+											<input type="text" placeholder="Enter your Users" class="form-control" destinations="users" ng-model="myModel.users"
+											 required readonly/>
+											<span class="input-group-btn">
+                      <button class="btn btn-default" ng-click="openusers('lg')" md-ink-ripple
+                        tooltip="Pilih Members"><i
+                        class="glyphicon glyphicon-list"></i></button>
+
+                    <span class="error text-small block" ng-if="Form.users.$dirty && Form.users.$invalid">First Users is required</span>
+
+											<span class="success text-small" ng-if="Form.users.$valid">Thank You!</span>
+											</span>
+									</div>
+
+								<div class="form-group" ng-class="{'has-error':Form.drivers.$dirty && Form.drivers.$invalid, 'has-success':Form.drivers.$valid}">
+										<label class="control-label">
+                    Drivers <span class="symbol required"></span>
+                  </label>
+										<p class="input-group">
+											<input type="text" placeholder="Enter your Drivers" class="form-control" destinations="drivers" ng-model="myModel.drivers"
+											 required readonly/>
+											<span class="input-group-btn">
+                      <button class="btn btn-default" ng-click="opendrivers('lg')" md-ink-ripple
+                        tooltip="Pilih Members"><i
+                        class="glyphicon glyphicon-list"></i></button>
+
+                    <span class="error text-small block" ng-if="Form.drivers.$dirty && Form.drivers.$invalid">First Drivers is required</span>
+
+											<span class="success text-small" ng-if="Form.drivers.$valid">Thank You!</span>
+											</span>
+									</div>
+
+									<div class="form-group" ng-class="{'has-error':Form.destinations.$dirty && Form.destinations.$invalid, 'has-success':Form.destinations.$valid}">
+										<label class="control-label">
+										 Destinations <span class="symbol required"></span>
+									</label>
+										<input date_loans="text" placeholder="Enter your Destinations" class="form-control" destinations="destinations" ng-model="myModel.destinations" required />
+										<span class="error text-small block" ng-if="Form.destinations.$dirty && Form.destinations.$invalid">First Destinations is required</span>
+										<span class="success text-small" ng-if="Form.destinations.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.date_transactions.$dirty && Form.date_transactions.$invalid, 'has-success':Form.date_transactions.$valid}">
+										<label class="control-label">
+										 Date_transactions <span class="symbol required"></span>
+									</label>
+										<input date_loans="text" placeholder="Enter your Date_transactions" class="form-control" destinations="date_transactions" ng-model="myModel.date_transactions" required />
+										<span class="error text-small block" ng-if="Form.date_transactions.$dirty && Form.date_transactions.$invalid">First Destinations is required</span>
+										<span class="success text-small" ng-if="Form.date_transactions.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.date_loans.$dirty && Form.date_loans.$invalid, 'has-success':Form.date_loans.$valid}">
+										<label class="control-label">
+										 Date_loans <span class="symbol required"></span>
+									</label>
+										<input date_loans="text" placeholder="Enter your Date_loans" class="form-control" destinations="date_loans" ng-model="myModel.date_loans" required
+										/>
+										<span class="error text-small block" ng-if="Form.date_loans.$dirty && Form.date_loans.$invalid">First Date_loans is required</span>
+										<span class="success text-small" ng-if="Form.date_loans.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.date_return.$dirty && Form.date_return.$invalid, 'has-success':Form.date_return.$valid}">
+										<label class="control-label">
+										Date_returns <span class="symbol required"></span>
+									</label>
+										<input date_returns="text" placeholder="Enter yourDate_returns" class="form-control" destinations="date_return" ng-model="myModel.date_returns" required
+										/>
+										<span class="error text-small block" ng-if="Form.date_returns.$dirty && Form.date_return.$invalid">FirstDate_returns is required</span>
+										<span class="success text-small" ng-if="Form.date_return.$valid">Thank You!</span>
+									</div>
+									<div class="form-group" ng-class="{'has-error':Form.tot_payments.$dirty && Form.tot_payments.$invalid, 'has-success':Form.tot_payments.$valid}">
+										<label class="control-label">
+										 Tot_payments <span class="symbol required"></span>
+									</label>
+										<input tot_payments="text" placeholder="Enter your Tot_payments" class="form-control" destinations="tot_payments" ng-model="myModel.tot_payments" required
+										/>
+										<span class="error text-small block" ng-if="Form.tot_payments.$dirty && Form.tot_payments.$invalid">First Tot_payments is required</span>
+										<span class="success text-small" ng-if="Form.tot_payments.$valid">Thank You!</span>
+									</div>
+
+									<!--<div class="form-group" ng-class="{'has-error':Form.email.$dirty && Form.email.$invalid, 'has-success':Form.email.$valid}">
 									<label class="control-label">
 										Email <span class="symbol required"></span>
 									</label>
-									<input gender="email" placeholder="Enter a valid E-mail" class="form-control" name="email" ng-model="myModel.email" required>
+									<input date_loans="email" placeholder="Enter a valid E-mail" class="form-control" destinations="email" ng-model="myModel.email" required>
 									<span class="error text-small block" ng-if="Form.email.$dirty && Form.email.$error.required">Email is required.</span>
 									<span class="error text-small block" ng-if="Form.email.$error.email">Please, enter a valid email address.</span>
 									<span class="success text-small" ng-if="Form.email.$valid">It's a valid e-mail!</span>
 								</div>-->
 
-								<div class="form-group" ng-class="{'has-error':Form.phone.$dirty && Form.phone.$invalid, 'has-success':Form.phone.$valid}">
-									<label class="control-label">
+									<!--<div class="form-group" ng-class="{'has-error':Form.phone.$dirty && Form.phone.$invalid, 'has-success':Form.phone.$valid}">
+										<label class="control-label">
 										Phone <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Phone" class="form-control" name="phone" ng-model="myModel.phone"
-										   required />
-									<span class="error text-small block" ng-if="Form.phone.$dirty && Form.phone.$invalid">First Phone is required</span>
-									<span class="success text-small" ng-if="Form.phone.$valid">Thank You!</span>
-								</div>
+										<input date_loans="text" placeholder="Enter your Phone" class="form-control" destinations="phone" ng-model="myModel.phone" required />
+										<span class="error text-small block" ng-if="Form.phone.$dirty && Form.phone.$invalid">First Phone is required</span>
+										<span class="success text-small" ng-if="Form.phone.$valid">Thank You!</span>
+									</div>
 
-								<div class="form-group" ng-class="{'has-error':Form.address.$dirty && Form.address.$invalid, 'has-success':Form.address.$valid}">
-									<label class="control-label">
+									<div class="form-group" ng-class="{'has-error':Form.address.$dirty && Form.address.$invalid, 'has-success':Form.address.$valid}">
+										<label class="control-label">
 										Address <span class="symbol required"></span>
 									</label>
-									<input gender="text" placeholder="Enter your Class" class="form-control" name="address" ng-model="myModel.address"
-										   required />
-									<span class="error text-small block" ng-if="Form.address.$dirty && Form.address.$invalid">First Address is required</span>
-									<span class="success text-small" ng-if="Form.address.$valid">Thank You!</span>
-								</div>
+										<input date_loans="text" placeholder="Enter your Class" class="form-control" destinations="address" ng-model="myModel.address" required
+										/>
+										<span class="error text-small block" ng-if="Form.address.$dirty && Form.address.$invalid">First Address is required</span>
+										<span class="success text-small" ng-if="Form.address.$valid">Thank You!</span>
+									</div>-->
 
-							</fieldset>
-						</div>
+								</fieldset>
+							</div>
 						</div>
 
 					<div class="row">
