--- a/public/assets/src/transactions/transactions-list.html
+++ b/public/assets/src/transactions/transactions-list.html
@@ -84,7 +84,7 @@
 
                         <td class="col-md-2">
                             <!--detail-->
-                            <button type="button" ng-click="detailtransactions(row.id)" md-ink-ripple tooltip="Detail Trasactions" class="btn btn-sm btn-info">
+                            <button type="button" ng-click="opendrivers(row.id)" md-ink-ripple tooltip="Detail Trasactions" class="btn btn-sm btn-info">
                             <i class="glyphicon glyphicon-zoom-in"></i>
                         </button>
 
