--- a/public/assets/src/customers/customers-create.html
+++ b/public/assets/src/customers/customers-create.html
@@ -3,7 +3,7 @@
 <section id="page-title">
 	<div class="row">
 		<div class="col-sm-8">
-			<h1 class="mainTitle" > CREATE CARS</h1>
+			<h1 class="mainTitle" > CREATE CUSTOMERS</h1>
 		</div>
 		<div ncy-breadcrumb></div>
 	</div>
